# calculator_cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  calculator.cpp  calculator.h  env.fish  main.cpp  run.fish  vcpkg-configuration.json  vcpkg.json
